--- a/style.css
+++ b/style.css
@@ -11,14 +11,14 @@ body {
     color: #F9Faf8;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     padding: 8px;
 }
 
 .logo {
     font-size: 24px;
     font-weight: bolder;
-    padding-left: 20px;
+    /*padding-left: 20px;*/
 }
 
 ul {
@@ -36,11 +36,20 @@ a {
 }
 
 .links {
-    padding-right: 20px;
+    /*padding-right: 20px;*/
 }
 
 .section-one {
     background-color: #1F2937; 
+    padding-top: 50px;
+    padding-bottom: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.hero {
+    width: 530px;
 }
 
 .hero-main {
@@ -55,6 +64,11 @@ a {
 }
 
 .hero-button {
-    background-color: #3882f6;
+    background: #3882f6;
     color: #e5e7eb;
+    border: 1px solid #3882f6;
+    padding: 6px 28px;
+    border-radius: 8px;
+    cursor: pointer;
+    margin-top: 10px;
 }
