--- a/style.css
+++ b/style.css
@@ -41,18 +41,18 @@ a {
 
 .section-one {
     background-color: #1F2937; 
-    padding-top: 50px;
-    padding-bottom: 50px;
+    padding-top: 100px;
+    padding-bottom: 100px;
     display: flex;
     align-items: center;
-    justify-content: space-around;
-    
+    padding-left: 120px;
+    gap: 50px;
 }
 
 .hero {
-    width: 370px;
+    width: 460px;
     margin-left: 120px;
-    outline: 2px solid black;
+    /*outline: 2px solid black;*/
     
 }
 
@@ -79,14 +79,23 @@ a {
 
 .hero-image {
     width: 500px;
-    height: 250px;
-    object-fit: cover;
+    height: 230px;
+    /*object-fit: cover;
     outline: 2px solid black;
-    overflow: hidden;
+    overflow: hidden;*/
+    background-color: grey;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
 }
 
-img {
+.placeholder {
+    color: #e5e7eb;
+}
+
+/*img {
     max-width: 100%;
     max-height: 100%;
     object-fit: cover;
-}
+}*/
