finished sectiopn two in html and css

--- a/style.css
+++ b/style.css
@@ -99,3 +99,38 @@ a {
     max-height: 100%;
     object-fit: cover;
 }*/
+
+.section-two {
+    text-align: center;
+    padding-top: 50px;
+    padding-bottom: 100px;
+}
+
+.title {
+    font-size: 36px; 
+    font-weight: bolder; 
+    color: #1f2937;
+    margin-bottom: 40px;
+}
+
+.info-container {
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+}
+
+.info {
+    max-width: 150px;
+}
+
+.info-card {
+    border: 3px solid #3882f6;
+    border-radius: 10px;
+    height: 140px;
+    margin-bottom: 10px;
+}
+
+.text {
+    font-size: 15px;
+    color: darkslategrey;
+}
