--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ a {
 .section-two {
     text-align: center;
     padding-top: 50px;
-    padding-bottom: 100px;
+    padding-bottom: 80px;
 }
 
 .title {
@@ -133,4 +133,30 @@ a {
 .text {
     font-size: 15px;
     color: darkslategrey;
+}
+
+.section-three {
+    background-color: #e5e7eb;
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+
+.quote-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left: 70px;
+}
+.quote {
+    font-size: 36px;
+    color: #1F2937;
+    font-style: italic;
+    max-width: 800px;
+    font-weight: lighter;
+}
+
+.quote-by {
+    font-weight: bolder;
+    max-width: 200px;
+    padding-left: 500px;
 }
